Go through the motion of stopping a process in case of an EPERM error

Because you aren't allowed to kill a zombie process on macOS,
we need to ignore the error while we try to stop the process
as gracefully as possible by sending kill signals multiple times.

ref:
- https://stackoverflow.com/questions/12521705/why-would-killpg-return-not-permitted-when-ownership-is-correct
- https://bugzilla.mozilla.org/show_bug.cgi?id=1329528